--- a/WooCommerce/Resources/release_notes.txt
+++ b/WooCommerce/Resources/release_notes.txt
@@ -1,4 +1,3 @@
-* New! You can now preselect the current Order status when editing a list of order statuses.
-* Improved! The "9+" badge on the Orders tab got a makeover. It no longer overlaps the tab label on iPhone SE/8 in landscape mode.
-* Improved! The Top Performers list on the new stats page no longer has a dark header bar in Dark mode.
-* Improved! On the Orders tab, the order status filter now sticks after changing an Order status.
+* If you noticed sales stats looking weird because of a timezone bug, we fixed it!
+* We fixed a weird visual bug when writing an e-mail to your customer from their order.
+* Keyboard no longer covers the date picker when entering a custom shipping provider for the Shipment Tracking extension
