Update metadata strings

--- a/WooCommerce/Resources/AppStoreStrings.pot
+++ b/WooCommerce/Resources/AppStoreStrings.pot
@@ -47,12 +47,11 @@ msgctxt "app_store_promo_text"
 msgid "Run your store wherever you are. The WooCommerce app makes it easy to manage orders and inventory, track sales, and monitor store activity like new orders and reviews."
 msgstr ""
 
-msgctxt "v2.9-whats-new"
+msgctxt "v3.0-whats-new"
 msgid ""
-"* New! You can now preselect the current Order status when editing a list of order statuses.\n"
-"* Improved! The "9+" badge on the Orders tab got a makeover. It no longer overlaps the tab label on iPhone SE/8 in landscape mode.\n"
-"* Improved! The Top Performers list on the new stats page no longer has a dark header bar in Dark mode.\n"
-"* Improved! On the Orders tab, the order status filter now sticks after changing an Order status.\n"
+"* If your sales stats seemed odd because timezones were off, we found that bug and fixed it.\n"
+"* Ever email a customer from the Order Details screen and notice that the navigation bar looked different than in the rest of the app? Now it’s consistent.\n"
+"* The keyboard no longer covers the date picker in the Shipment Tracking extension, which makes it significantly easier to actually pick a date.\n"
 msgstr ""
 
 #. translators: This is a promo message that will be attached on top of a screenshot in the App Store.
