--- a/RELEASE-NOTES.txt
+++ b/RELEASE-NOTES.txt
@@ -5,6 +5,7 @@
 - Updated appearance of Order Details - temporarily disabling dark mode.
 - bugfix: fixed UI appearance on cells of Order List when tappen with dark mode enabled.
 - bugfix: Reviews no longer convert to partial dark mode. Dark mode coming soon!
+- bugfix: Order Details now has the right space between cells.
 
 3.0
 -----
